Expose digstdk theme from package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "./dkfds-DEPRECATED": "./dist/DEPRECATED/dkfds-DEPRECATED.min.js",
     "./dkfds.min.css": "./dist/css/dkfds.min.css",
     "./dkfds.min.js": "./dist/js/dkfds.min.js",
-    "./all-svg-icons.svg": "./dist/img/all-svg-icons.svg"
+    "./all-svg-icons.svg": "./dist/img/all-svg-icons.svg",
+    "./dkfds-digstdk.min.css": "./dist/css/dkfds-digstdk.min.css"
   },
   "scripts": {
     "build": "webpack"
